--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 
-    <title>My App Network</title>
+    <title>Raccount Network</title>
   </head>
   <body>
 
